# async-log-system

./: .gitignore  CMakeLists.txt  README.md  logger.conf
examples/: main.cpp  stress_test.cpp
include/: BlockingQueue.h  FileAppender.h  LogLevel.h  LogMessage.h  Logger.h  LoggerConfig.h
src/: FileAppender.cpp  Logger.cpp  LoggerConfig.cpp
tests/: test_logger.cpp
